--- a/animations❗️/car-animation !!/car.css
+++ b/animations❗️/car-animation !!/car.css
@@ -3,58 +3,51 @@
     padding: 0;
     box-sizing: border-box;
   }
-  
-  body {
-    background-color: #21d4fd;
-    background-image: linear-gradient(19deg, #142aee 0%, #b721ff 100%);
-    height: 100vh;
-    padding: 10px;
+body{
+  background-color: #21d4fd;
+  background-image: linear-gradient(19deg, #011093 0%, #b721ff 100%);
+  height: 100vh;
+  padding: 10px;
+}
+.back-img{
+background-image: url(./img/Img_1.png);
+background-size:cover;
+width: 60%;
+height:600px;
+margin: auto;
+box-shadow:5px 5px 10px black;
+position: relative;
+overflow: hidden;
+}
+.ground{
+  background-image: url(./img/Img_02.png);
+  width:500%;
+  height:150px;
+  position:absolute;
+  bottom:0;
+  animation:left-move 7s linear infinite;
+}
+.car{
+  position:absolute;
+  bottom:50px;
+  left: 30%;
+  z-index:2;
+  animation: updown-move 0.5s  ease-in-out infinite alternate;
+}
+@keyframes left-move {
+  100%{
+    transform:translateX(-2000px)
+  }
+}
+@keyframes updown-move {
+  0%{
+    transform: translateY(3px);
+  }
+  50%{
+    transform: translateY(0);
+  } 
+  100%{
+    transform: translateY(-3px);
   }
   
-  .bg-image {
-    background-image: url(../../images/Img_1.png);
-    width: 80%;
-    height: 700px;
-    margin: auto;
-    background-size: cover;
-    box-shadow: 5px 5px 10px black;
-    position: relative;
-    overflow: hidden;
-  }
-  
-  .ground {
-    background-image: url(../../images/Img_02.png);
-    width: 1000000%;
-    height: 150px;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    animation: left-move 10s linear infinite;
-  }
-  
-  .car {
-    position: absolute;
-    bottom: 52px;
-    left: 33%;
-    z-index: 2;
-    animation: hop-up 0.5s infinite alternate ease-in-out ;
-  }
-  
-  @keyframes left-move {
-    100% {
-      transform: translate(-2000px);
-    }
-  }
-  
-  @keyframes hop-up {
-    0% {
-      transform: translateY(5px);
-    }
-    50% {
-      transform: translateY(0);
-    }
-    100% {
-      transform: translateY(-3px);
-    }
-  }
-  
+}
