--- a/animations❗️/autumn-animation/self-study/falldays.css
+++ b/animations❗️/autumn-animation/self-study/falldays.css
@@ -5,7 +5,7 @@
   }
   
   body {
-    background-image: url(./images/bg.jpg);
+    background-image: url(./img/bg.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
