--- a/bootstrap/installation/style.css
+++ b/bootstrap/installation/style.css
@@ -5,78 +5,135 @@
     --secondary-color: #4d3822;
     --hover-color: #e76f51;
     --section-color: #b78752;
+    
 }
+
 *{
-    font-family:"Plus-Jakarta Sans,serif"
+    font-family: "Plus Jakarta Sans", serif;
 }
+
+
+/* -------------------------------------------------------------------------- */
+/*                                   NAVBAR                                   */
+/* -------------------------------------------------------------------------- */
+
 .navbar{
     position: fixed;
     z-index:5;
     width: 100%;
-
-}
-.navbar-nav{
-    font-size: 1.3rem;
-    text-transform: capitalize;   
-    /* dikkat */
 }
 .navbar .container{
-    background-color: rgba(0, 0, 0,0.7)!important;
+    background-color: rgba(0, 0, 0,0.7);
+    text-transform: capitalize;
+    font-weight: bold;
+
 }
+
+.navbar-nav{
+    font-size: 1.3rem;
+}
+
 .nav-link{
     color:white !important;
 }
+
 .nav-link:hover{
-    color: var(--primary-color) !important;
+    color:var(--primary-color) !important;
 }
-.carousel-caption{
-    position:absolute;
-    bottom:40%;
+
+
+/* -------------------------------------------------------------------------- */
+/*                                  CAROUSEL                                  */
+/* -------------------------------------------------------------------------- */
+
+.carousel-item{
+    height: 100vh;
+   
 }
+
+.carousel-item img{
+    height: 100%;
+    object-fit: cover;
+}
+
+
 .carousel-caption .btn{
-    background-color: var(--primary-color);
+    background-color:var(--primary-color) ;
     border:none;
     width: 10rem;
     font-weight: bold;
     white-space: nowrap;
-    color: white;
+    color:white
+
 }
+
 .carousel-caption .btn:first-child{
     background-color: transparent;
 }
+
 .carousel-caption .btn:first-child:hover{
     background-color: white;
-    color: black;
+    color:black
 }
+
 .carousel-caption{
     bottom: 40%;
 }
-.carousel-item{
-    height: 100vh;   
-}
-.carousel-item{
-    width: 100%;
-    object-fit: cover;
-    /* ÖNEMLİ foto sünmesin diye, container height 100, foto width 100%, ve object-fit*/
-}
+
 .hero{
     position: relative;
-    z-index:3;
+    z-index:3
 }
+
 .black{
     background-color: rgb(0, 0, 0,0.7);
-    width: 400px;
-    height: 450px;
+    width: 450px;
+    height: 500px;
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%) rotate(45deg);
+    top:50%;
+    left:50%;
+    transform:translate(-50%,-50%)  rotate(45deg);
+   
 }
-.carousal-indicators{
-    gap: 0.7rem;
+.carousel-indicators{
+    gap:0.7rem;
 }
-.carousal-indicators button{
+
+
+.carousel-indicators button{
 background-color: var(--primary-color) !important;
-padding: 0.1rem !important;
+padding:0.1rem !important;
 width: 3rem !important;
+}
+
+/* -------------------------------------------------------------------------- */
+/*                                    ABOUT                                   */
+/* -------------------------------------------------------------------------- */
+
+
+section#about{
+    background-color:var(--secondary-color) ;
+    color:white;
+
+}
+
+.image-container{
+    position: relative;
+}
+
+.image-container img{
+    width: 100%;
+}
+
+.about-info{
+    position:absolute;
+    top:0;
+    left:0;
+    width: 100%;
+    height: 100%;
+   background-image:linear-gradient(to bottom,rgba(0,0,0,0.7),rgba(188, 108, 37,0.5))
+}
+
+section#about .btn{
+    background-color: var(--primary-color);
 }
