--- a/guess-number-game/style.css
+++ b/guess-number-game/style.css
@@ -20,7 +20,6 @@ body {
 
 .card {
   box-shadow: 0px 10px 10px rgba(0, 0, 0, 1);
-  /* Kartın basit gölgesi */
   border-radius: 10px;
   padding: 2rem;
   background-image: linear-gradient(69.7deg, rgba(244, 37, 243, 1) 1.4%, rgba(244, 87, 1, 1) 36.2%, rgba(255, 204, 37, 1) 72.2%, rgba(20, 196, 6, 1) 113%);
@@ -28,7 +27,6 @@ body {
 
 .card:hover {
   box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.3);
-  /* Hover durumunda daha belirgin gölge */
 }
 
 .head {
@@ -62,16 +60,12 @@ body {
 
   background-image: linear-gradient(to right, #ee0979 0%, #ff6a00 51%, #ee0979 100%);
   padding: 4px 20px;
-  /* Reset butonunun boyutunu artırdık */
   font-size: 22px;
-  /* Reset butonunun font boyutunu büyüttük */
 }
 
 #send {
   padding: 4px 25px;
-  /* Send butonunun boyutunu arttırdık */
   font-size: 22px;
-  /* Send butonunun font boyutunu büyüttük */
 }
 
 #reset:hover {
@@ -117,30 +111,37 @@ body {
 }
 
 @media screen and (max-width: 768px) {
- #send, #reset{
-  width: 100%;
- }
-.row{
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  justify-content: center;
-  align-items: center;
+
+  #send,
+  #reset {
+    width: 100%;
+  }
+
+  .row {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    justify-content: center;
+    align-items: center;
+  }
+
+  #reset:hover,
+  #send:hover {
+    color: white;
+    background-position: right center;
+    text-decoration: none;
+  }
+
+  .card {
+    max-width: 100%;
+  }
+
+  .h1 {
+    font-size: 1rem;
+  }
 }
 
-#reset:hover, #send:hover {
-  color: white;
-  background-position: right center;
-  text-decoration: none;
-}
-.card{
-  max-width: 100%;
-}
-.h1{
-  font-size: 1rem;
-}
-}
 @media (max-width: 480px) {
   .head {
-    font-size: 35px;  /* Daha küçük ekranlar için daha da küçült */
+    font-size: 35px;
   }
